--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <svg width="500" height="300">
+      <g transform="translate(5, 30)">
+        <g class="links"></g>
+        <g class="nodes"></g>
+        <g class="labels"></g>
+      </g>
+    </svg>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
