use the full screen area to draw tree

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Binary Tree Visualizer</title>
   </head>
   <body>
     <div id="app">
@@ -14,8 +14,8 @@
         <input type="submit" id="updateBtn" value="update tree" />
         <p id="errorText"></p>
       </form>
-      <svg width="500" height="300">
-        <g transform="translate(5, 30)">
+      <svg width="100%" height="100%">
+        <g transform="translate(0, 40)">
           <g class="links"></g>
           <g class="nodes"></g>
           <g class="labels"></g>
